Switched to new Season 2

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About - Origins Rebirth - About</title>
+  <title>About - Origins Ascendants - About</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="icon" href="assets/logo.png" type="image/png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
@@ -36,9 +36,9 @@
   <a class="skip-link" href="#main-content">Skip to content</a>
   <header class="site-header">
     <div class="logo-container">
-      <a href="index.html" aria-label="Home"><img src="assets/logo.png" alt="Origins Rebirth Logo" class="site-logo" /></a>
+      <a href="index.html" aria-label="Home"><img src="assets/logo.png" alt="Origins Ascendants Logo" class="site-logo" /></a>
     </div>
-    <h1 class="site-title">Origins Rebirth</h1>
+    <h1 class="site-title">Origins Ascendants</h1>
     <button class="menu-toggle" aria-label="Menu" aria-expanded="false">
       <span class="hamburger" aria-hidden="true"></span>
     </button>
@@ -56,7 +56,7 @@
       <a href="contact.html">Join</a>
     </nav>
     <div id="pwa-install" class="pwa-install" hidden aria-hidden="true" role="dialog" aria-live="polite">
-      <span class="pwa-message">Add Origins Rebirth to your home screen for quick access.</span>
+      <span class="pwa-message">Add Origins Ascendants to your home screen for quick access.</span>
       <button id="installBtn" class="btn-primary">Install</button>
       <button id="dismissInstall" class="btn-secondary" aria-label="Dismiss install prompt">Later</button>
     </div>
@@ -64,7 +64,7 @@
 
   <!-- ✦ HERO SECTION -->
   <section class="hero">
-    <h2>Origins Rebirth — The Next Chapter</h2>
+    <h2>Origins Ascendants — The Next Chapter</h2>
   </section>
 
   <!-- ✦ MAIN CONTENT -->
@@ -72,12 +72,12 @@
     <section class="glass-box intro">
       <div class="about-layout">
         <div class="about-text">
-          <h2>About Origins Rebirth</h2>
+          <h2>About Origins Ascendants</h2>
           <p>
-            Origins Rebirth is a continuation of the Origins Reborn server, officially named after a careful rebranding and reboot. The server is led by Flyn, an administrator tasked with setup, design, and development, under the guidance of Intravenous (also known as Intra), a veteran player with a record of achievements including managing the large market and holding the all-time top voter status.
+            Origins Ascendants is a continuation of the Origins Reborn server, officially named after a careful rebranding and reboot. The server is led by Flyn, an administrator tasked with setup, design, and development, under the guidance of Intravenous (also known as Intra), a veteran player with a record of achievements including managing the large market and holding the all-time top voter status.
           </p>
           <p>
-            Since Towny data from the original server has not been released, Origins Rebirth preserves the original Origins worlds, allowing players to explore them in spectator mode and enjoy nostalgia. Plans include providing an archived online map featuring Towny regions from these preserved worlds.
+            Since Towny data from the original server has not been released, Origins Ascendants preserves the original Origins worlds, allowing players to explore them in spectator mode and enjoy nostalgia. Plans include providing an archived online map featuring Towny regions from these preserved worlds.
           </p>
           <p>
             The server features new worlds with a world border set at 10,000 blocks, utilizing the same custom world generation as Origins Reborn for the overworld and the End, while the Nether uses Minecraft’s default generation.
@@ -91,8 +91,7 @@
         </div>
         <div class="divider" aria-hidden="true"></div>
         <aside class="discord-widget" aria-label="Discord widget">
-          <iframe title="Origins Rebirth Discord" src="https://discord.com/widget?id=297884707582902273&theme=dark" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
-        </aside>
+          <iframe title="Origins Ascendants Discord" src="https://discord.com/widget?id=1317265139703091321&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
       </div>
     </section>
   </main>
@@ -102,7 +101,7 @@
     <div class="footer-container">
       <div class="footer-column">
         <h4>About</h4>
-        <p>Origins Rebirth is a custom Minecraft server blending the best of Java and Bedrock gameplay with powerful Origins and plugins.</p>
+        <p>Origins Ascendants is a custom Minecraft server blending the best of Java and Bedrock gameplay with powerful Origins and plugins.</p>
       </div>
       <div class="footer-column">
         <h4>Quick Links</h4>
@@ -123,7 +122,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2025 Origins Rebirth. All rights reserved.</p>
+      <p>&copy; 2025 Origins Ascendants. All rights reserved.</p>
     </div>
   </footer>
 
