--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Origins Rebirth</title>
+  <title>Origins Ascendants</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#0b0b0b">
@@ -15,9 +15,9 @@
   <a class="skip-link" href="#main-content">Skip to content</a>
   <header class="site-header">
     <div class="logo-container">
-      <a href="index.html" aria-label="Home"><img src="assets/logo.png" alt="Origins Rebirth Logo" class="site-logo"></a>
+      <a href="index.html" aria-label="Home"><img src="assets/logo.png" alt="Origins Ascendants Logo" class="site-logo"></a>
     </div>
-    <h1 class="site-title">Origins Rebirth</h1>
+    <h1 class="site-title">Origins Ascendants</h1>
     <button class="menu-toggle" aria-label="Menu" aria-expanded="false">
       <span class="hamburger" aria-hidden="true"></span>
     </button>
@@ -35,7 +35,7 @@
       <a href="contact.html">Join</a>
     </nav>
     <div id="pwa-install" class="pwa-install" hidden aria-hidden="true" role="dialog" aria-live="polite">
-      <span class="pwa-message">Add Origins Rebirth to your home screen for quick access.</span>
+      <span class="pwa-message">Add Origins Ascendants to your home screen for quick access.</span>
       <button id="installBtn" class="btn-primary">Install</button>
       <button id="dismissInstall" class="btn-secondary" aria-label="Dismiss install prompt">Later</button>
     </div>
@@ -43,13 +43,13 @@
 
   <main id="main-content">
     <section>
-      <h2>Welcome to Origins Rebirth!</h2>
+      <h2>Welcome to Origins Ascendants!</h2>
       <p>This is a custom Minecraft Origins server that supports Java and Bedrock players. Explore unique plugins, choose your origin, and join a thriving cross-platform community.</p>
     </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Origins Rebirth. All rights reserved.</p>
+    <p>&copy; 2025 Origins Ascendants. All rights reserved.</p>
   </footer>
   <script src="js/script.js"></script>
 </body>
