--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Origins Rebirth</title>
+<title>Origins Ascendants</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="icon" href="assets/logo.png" type="image/png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -28,17 +28,17 @@
     <div class="slide" style="background-image: url('assets/bg9.jpg');"></div>
     <div class="slide" style="background-image: url('assets/bg10.jpg');"></div>
     <div class="slide" style="background-image: url('assets/bg11.jpg');"></div>
-    <div class="slide" style="background-image: url('assets/bg12.jpg');"></div>  
-    <div class="slide" style="background-image: url('assets/bg13.jpg');"></div>      
+    <div class="slide" style="background-image: url('assets/bg12.jpg');"></div>
+    <div class="slide" style="background-image: url('assets/bg13.jpg');"></div>  
   </div>
   <div class="background-overlay"></div>
   <!-- ✦ PAGE CONTENT BELOW -->
   <a class="skip-link" href="#main-content">Skip to content</a>
   <header class="site-header">
     <div class="logo-container">
-      <a href="index.html" aria-label="Home"><img src="assets/logo.png" alt="Origins Rebirth Logo" class="site-logo"></a>
+      <a href="index.html" aria-label="Home"><img src="assets/logo.png" alt="Origins Ascendants Logo" class="site-logo"></a>
     </div>
-    <h1 class="site-title">Origins Rebirth</h1>
+    <h1 class="site-title">Origins Ascendants</h1>
 
     <!-- Menu toggle (injected or enhanced by JS) -->
     <button class="menu-toggle" aria-label="Menu" aria-expanded="false">
@@ -59,11 +59,11 @@
       <a href="contact.html">Join</a>
     </nav>
     <div id="pwa-install" class="pwa-install" hidden aria-hidden="true" role="dialog" aria-live="polite">
-      <span class="pwa-message">Add Origins Rebirth to your home screen for quick access.</span>
+      <span class="pwa-message">Add Origins Ascendants to your home screen for quick access.</span>
       <button id="installBtn" class="btn-primary">Install</button>
       <button id="dismissInstall" class="btn-secondary" aria-label="Dismiss install prompt">Later</button>
     </div>
-  </header>
+  </header
 
   <!-- ✦ MAIN CONTENT -->
   <section class="hero">
@@ -72,7 +72,7 @@
 
   <main id="main-content" class="container home-sections">
     <section class="glass-box intro">
-      <h2>Welcome to Origins Rebirth</h2>
+      <h2>Welcome to Origins Ascendants</h2>
       <p>Explore a vibrant Minecraft server powered by custom Origins and plugins. Our server supports both Java and Bedrock editions, offering a seamless cross-platform experience.</p>
     </section>
 
@@ -110,7 +110,7 @@
   <div class="footer-container">
     <div class="footer-column">
       <h4>About</h4>
-      <p>Origins Rebirth is a custom Minecraft server blending the best of Java and Bedrock gameplay with powerful Origins and plugins.</p>
+      <p>Origins Ascendants is a custom Minecraft server blending the best of Java and Bedrock gameplay with powerful Origins and plugins.</p>
     </div>
     <div class="footer-column">
       <h4>Quick Links</h4>
@@ -131,7 +131,7 @@
     </div>
   </div>
   <div class="footer-bottom">
-    <p>&copy; 2025 Origins Rebirth. All rights reserved.</p>
+    <p>&copy; 2025 Origins Ascendants. All rights reserved.</p>
   </div>
   </footer>
 
