--- a/origins.html
+++ b/origins.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Origins Rebirth - Origins</title>
+  <title>Origins Ascendants - Origins</title>
   <link rel="stylesheet" href="css/style.css" />
   <link rel="icon" href="assets/logo.png" type="image/png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
@@ -360,12 +360,12 @@
     <!-- Logo -->
     <div class="logo-container">
       <a href="index.html">
-        <img src="assets/logo.png" class="site-logo" alt="Origins Rebirth Logo">
+        <img src="assets/logo.png" class="site-logo" alt="Origins Ascendants Logo">
       </a>
     </div>
 
     <!-- Title -->
-    <h1 class="site-title">Origins Rebirth</h1>
+    <h1 class="site-title">Origins Ascendants</h1>
 
     <!-- Navigation -->
     <button class="menu-toggle" aria-label="Menu" aria-expanded="false">
@@ -387,7 +387,7 @@
       <a href="contact.html">Join</a>
     </nav>
     <div id="pwa-install" class="pwa-install" hidden aria-hidden="true" role="dialog" aria-live="polite">
-      <span class="pwa-message">Add Origins Rebirth to your home screen for quick access.</span>
+      <span class="pwa-message">Add Origins Ascendants to your home screen for quick access.</span>
       <button id="installBtn" class="btn-primary">Install</button>
       <button id="dismissInstall" class="btn-secondary" aria-label="Dismiss install prompt">Later</button>
     </div>
@@ -1182,7 +1182,7 @@
     <div class="footer-container">
       <div class="footer-column">
         <h4>About</h4>
-        <p>Origins Rebirth is a custom Minecraft server blending the best of Java and Bedrock gameplay with powerful Origins and plugins.</p>
+        <p>Origins Ascendants is a custom Minecraft server blending the best of Java and Bedrock gameplay with powerful Origins and plugins.</p>
       </div>
       <div class="footer-column">
         <h4>Quick Links</h4>
@@ -1203,7 +1203,7 @@
       </div>
     </div>
     <div class="footer-bottom">
-      <p>&copy; 2025 Origins Rebirth. All rights reserved.</p>
+      <p>&copy; 2025 Origins Ascendants. All rights reserved.</p>
     </div>
   </footer>
 
